--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "dev": "nodemon ./bin/www --env development",
+    "prod": "node ./bin/www --env production",
     "watch": "webpack --watch --mode=development",
     "build": "webpack --config webpack.config.js --mode development",
     "build-prod": "webpack --config webpack.config.js --mode production"
@@ -15,6 +17,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
+    "mysql": "^2.16.0",
     "node-sass-middleware": "0.11.0"
   },
   "devDependencies": {
@@ -25,6 +28,7 @@
     "css-loader": "^2.1.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "node-sass": "^4.11.0",
+    "nodemon": "^1.18.9",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.29.0",
